<resources>
    <string name="app_name">ProiectDAM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="main_nav_home_title">Home</string>
    <string name="main_nav_add">Add</string>
    <string name="main_nav_about">About</string>
    <string name="main_nav_chart_item">Item Chart</string>
    <string name="ungureanunicoleta16_stud_ase_ro">ungureanunicoleta16@stud.ase.ro</string>
    <string name="nicoleta_ungureanu">Nicoleta Ungureanu</string>
    <string name="main_nav_list">List</string>
    <string name="form_title_s">Please add your new item:</string>
    <string name="form_add_s">Add</string>
    <string name="form_tiet_add_name_s">Name</string>
    <string name="form_label_country">Country</string>
    <string name="form_tiet_price_s">Price</string>
    <string name="form_tiet_year_s">Year</string>
    <string name="form_label_item_type">Item Type</string>
    <string name="about_name_company">Company</string>
    <string name="company_name">TechFilia</string>
    <string name="about_label_phone_number">Phone Number</string>
    <string name="phone_number">0233 / 456 789</string>
    <string name="app_version">App. version 1.7</string>
    <string name="new_item_added">A new item is added.</string>
    <string name="lv_default_value">\" - \"</string>
    <string name="rating_submit_btn">Submit</string>
    <string name="bill_item">Bill Item</string>
    <string name="stamp_item">Stamp Item</string>
    <string name="form_cancel">Cancel</string>
    <string name="rb_stamp">Stamp</string>
    <string name="rb_bills">Bills</string>
    <string name="rb_coins">Coins</string>
    <string name="main_home">Home</string>

    //variabile parametrizabile
    <string name="show_option">Optiunea %1$s a fost selectata</string>
    <string name="chart_legend_format">%1$s - %2$s</string>
    <string name="item_list_page">List</string>
    <string name="user_registration_form_title">User Registration</string>
    <string name="main_nav_user">User</string>
    <string name="user_icon">User Icon</string>

    //optiuni spinner Country
    <string-array name="form_choose_country">
        <item>Romania</item>
        <item>Argentina</item>
        <item>Japan</item>
        <item>Spain</item>
        <item>Italy</item>
        <item>USA</item>
        <item>Netherlands</item>
    </string-array>

    //optiuni spinner Type
    <string-array name="form_choose_item">
        <item>Stamp</item>
        <item>Coin</item>
        <item>Bill</item>
    </string-array>

    //optiuni spinner User Gender
    <string-array name="form_choose_gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>

</resources>