<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingForm">

    <Button
        android:id="@+id/form_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/form_add_s"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_add_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/form_cancel_btn" />

    <Button
        android:id="@+id/form_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/form_cancel"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_cancel_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/form_add_btn" />

    <TextView
        android:id="@+id/form_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        android:text="@string/form_title_s"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/form_til_add_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_til_add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/form_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_tiet_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_tiet_add_name_s"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_til_add_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/form_til_add_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_tiet_add_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_tiet_price_s"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/form_label_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/form_label_country"
        app:layout_constraintTop_toBottomOf="@id/form_add_spinner_type"
        app:layout_constraintBottom_toTopOf="@id/form_add_spinner"/>

    <Spinner
        android:id="@+id/form_add_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/form_label_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"/>

    <TextView
        android:id="@+id/form_label_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/form_label_item_type"
        app:layout_constraintTop_toBottomOf="@id/form_til_add_year"
        app:layout_constraintBottom_toTopOf="@id/form_add_spinner_type"/>

    <Spinner
        android:id="@+id/form_add_spinner_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/form_label_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_til_add_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/form_til_add_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_tiet_add_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_tiet_year_s"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>